logs/python-rdm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_rdm-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/rdm'...
Listing './lib/python3.5/site-packages/rdm/db'...
Compiling './lib/python3.5/site-packages/rdm/db/context.py'...
***   File "./lib/python3.5/site-packages/rdm/db/context.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rdm/db/package_data'...
Listing './lib/python3.5/site-packages/rdm/db/package_data/categories'...
Listing './lib/python3.5/site-packages/rdm/db/package_data/widgets'...
Listing './lib/python3.5/site-packages/rdm/db/static'...
Listing './lib/python3.5/site-packages/rdm/db/static/rdm.db'...
Listing './lib/python3.5/site-packages/rdm/db/static/rdm.db/icons'...
Listing './lib/python3.5/site-packages/rdm/db/static/rdm.db/icons/treeview'...
Listing './lib/python3.5/site-packages/rdm/db/static/rdm.db/icons/widget'...
Listing './lib/python3.5/site-packages/rdm/db/templates'...
Listing './lib/python3.5/site-packages/rdm/db/templates/interactions'...
Listing './lib/python3.5/site-packages/rdm/wrappers'...
Listing './lib/python3.5/site-packages/rdm/wrappers/aleph'...
Compiling './lib/python3.5/site-packages/rdm/wrappers/aleph/aleph.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (aleph.py, line 247)
Listing './lib/python3.5/site-packages/rdm/wrappers/caraf'...
Listing './lib/python3.5/site-packages/rdm/wrappers/caraf/bin'...
Listing './lib/python3.5/site-packages/rdm/wrappers/package_data'...
Listing './lib/python3.5/site-packages/rdm/wrappers/package_data/categories'...
Listing './lib/python3.5/site-packages/rdm/wrappers/package_data/widgets'...
Listing './lib/python3.5/site-packages/rdm/wrappers/proper'...
Listing './lib/python3.5/site-packages/rdm/wrappers/proper/bin'...
Listing './lib/python3.5/site-packages/rdm/wrappers/rsd'...
Compiling './lib/python3.5/site-packages/rdm/wrappers/security.py'...
***   File "./lib/python3.5/site-packages/rdm/wrappers/security.py", line 101
    print 'All illegal predicates found.'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rdm/wrappers/static'...
Listing './lib/python3.5/site-packages/rdm/wrappers/static/rdm.wrappers'...
Listing './lib/python3.5/site-packages/rdm/wrappers/static/rdm.wrappers/icons'...
Listing './lib/python3.5/site-packages/rdm/wrappers/static/rdm.wrappers/icons/treeview'...
Listing './lib/python3.5/site-packages/rdm/wrappers/static/rdm.wrappers/icons/widget'...
Listing './lib/python3.5/site-packages/rdm/wrappers/templates'...
Listing './lib/python3.5/site-packages/rdm/wrappers/templates/visualizations'...
Listing './lib/python3.5/site-packages/rdm/wrappers/tertius'...
Compiling './lib/python3.5/site-packages/rdm/wrappers/tertius/helper.py'...
***   File "./lib/python3.5/site-packages/rdm/wrappers/tertius/helper.py", line 31
    print attribute_str
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rdm/wrappers/tertius/src'...
Listing './lib/python3.5/site-packages/rdm/wrappers/treeliker'...
Listing './lib/python3.5/site-packages/rdm/wrappers/treeliker/bin'...
Listing './lib/python3.5/site-packages/rdm/wrappers/treeliker/bin/lib'...
Listing './lib/python3.5/site-packages/rdm/wrappers/wordification'...
Compiling './lib/python3.5/site-packages/rdm/wrappers/wordification/wordification.py'...
***   File "./lib/python3.5/site-packages/rdm/wrappers/wordification/wordification.py", line 22
    (name_to_table, connecting_tables, context, index_by_value, target_table_name, word_att_length, ex_idxs)):
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
